smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-no-newline.smithy
// Parse error at line 3, column 19 near `string`: Expected a line break | Model
$version: "2.0"
namespace com.foo string Foo
